[package]
name = "fly_rust_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Version 0.7 doesn't use the 'develop' or 'jpeg' features anymore
rawler = "0.7" 
libc = "0.2"
rayon = "1"
resvg = "0.47.0"
fontdb = "0.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Must stay "unwind": the FFI entry points in lib.rs rely on std::panic::catch_unwind
# to turn a panic inside rawler/resvg into a null return instead of aborting the C#
# host process. catch_unwind is a no-op under panic = "abort". The boundary is still
# safe because catch_unwind stops any unwind before it crosses the extern "C" frame.
panic = "unwind"
strip = true

